fix mobile menu style alignment

--- a/src/components/menu/_style.scss
+++ b/src/components/menu/_style.scss
@@ -274,6 +274,9 @@ cagov-navoverlay {
           padding-right: .5rem;
         }
       }
+      @include phone {
+        border-top: solid 1px $gray-300;
+      }
 
       &.expanded {
         @include phone {
@@ -358,6 +361,10 @@ cagov-navoverlay {
       overflow: hidden;
       transition: max-height 0.5s $slow-curve;
 
+      @include phone {
+        padding: .5rem 0;
+      }
+
       &-link {
         font-weight: 400;
         font-size: 1.125rem;
@@ -376,6 +383,9 @@ cagov-navoverlay {
         @include tablet {
           padding: .5rem 0;
           line-height: 2rem;
+        }
+        @include phone {
+          padding: .5rem .25rem .5rem 1rem;
         }
       }
     }
@@ -400,30 +410,32 @@ cagov-navoverlay.display-menu {
       outline: none;
     }
   }
-  &.reveal-items {
-    .expanded-menu {
-      &-col,
-      &-search {
-        @include tablet {
-          transition: all 0.6s $bounce-curve;
-          opacity: 1;
-          transform: translateY(0);
-        }
+  .expanded-menu {
+    @include phone {
+      margin-left: -15px;
+      width: 100vw;
+    }
+    &-col,
+    &-search {
+      @include tablet {
+        transition: all 0.6s $bounce-curve;
+        opacity: 1;
+        transform: translateY(0);
       }
-      &-col {
-        @include tablet {
-          &.section-get-help {
-            transition-delay: 0.15s !important;
-          }
-          &.section-health-info {
-            transition-delay: 0.3s !important;
-          }
-          &.section-working-living-safely {
-            transition-delay: 0.45s !important;
-          }
-          &.section-you-help {
-            transition-delay: 0.6s !important;
-          }
+    }
+    &-col {
+      @include tablet {
+        &.section-get-help {
+          transition-delay: 0.15s !important;
+        }
+        &.section-health-info {
+          transition-delay: 0.3s !important;
+        }
+        &.section-working-living-safely {
+          transition-delay: 0.45s !important;
+        }
+        &.section-you-help {
+          transition-delay: 0.6s !important;
         }
       }
     }
